examples/type_system/failing/51_strict_public_missing_param_annotation.flx
public fn add(x, y) -> Int {
    x + y
}

fn main() -> Unit {
}
